k8s/dev/20-backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: dev
  labels: { app: backend, version: blue }
spec:
  replicas: 1
  selector: { matchLabels: { app: backend, version: blue } }
  template:
    metadata:
      labels: { app: backend, version: blue }
    spec:
      containers:
      - name: backend
        image: 293113319402.dkr.ecr.us-east-1.amazonaws.com/rmit-store/backend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
