k8s/dev/30-frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: dev
  labels: { app: frontend, color: dev }
spec:
  replicas: 1
  selector: { matchLabels: { app: frontend, color: dev } }
  template:
    metadata:
      labels: { app: frontend, color: dev }
    spec:
      containers:
      - name: frontend
        image: 293113319402.dkr.ecr.us-east-1.amazonaws.com/rmit-store/frontend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080   # webpack-dev-server
