k8s/dev/21-backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: dev
  labels: { app: backend }
spec:
  type: ClusterIP
  selector:
    app: backend
    color: dev
  ports:
  - port: 3000
    targetPort: 3000
