k8s/dev/31-frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: dev
  labels: { app: frontend }
spec:
  type: ClusterIP
  selector:
    app: frontend
    color: dev
  ports:
  - port: 8080
    targetPort: 8080
